@@ -1,6 +1,9 @@
 master
+- Stallmanu
+  Sage keybind
 - that4chanwolf
   Remove Mayhem's stupidity.
+  Redirect /jp/ to fuuka.warosu.org
 - Mayhem
   New feature: Menu, which
     - replaces and includes Report Button and Delete Button.
